// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tool Context > oaiParams > should handle array fields 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "tags": {
      "description": "List of tags",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
  },
  "required": [
    "tags",
  ],
  "type": "object",
}
`;

exports[`Tool Context > oaiParams > should handle array of enums 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "colors": {
      "description": "List of colors",
      "items": {
        "enum": [
          "red",
          "blue",
          "green",
        ],
        "type": "string",
      },
      "type": "array",
    },
  },
  "required": [
    "colors",
  ],
  "type": "object",
}
`;

exports[`Tool Context > oaiParams > should handle basic object schema 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "age": {
      "description": "The user age",
      "type": "number",
    },
    "name": {
      "description": "The user name",
      "type": "string",
    },
  },
  "required": [
    "name",
    "age",
  ],
  "type": "object",
}
`;

exports[`Tool Context > oaiParams > should handle enum fields 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "color": {
      "description": "Choose a color",
      "enum": [
        "red",
        "blue",
        "green",
      ],
      "type": "string",
    },
  },
  "required": [
    "color",
  ],
  "type": "object",
}
`;

exports[`Tool Context > oaiParams > should handle fields without descriptions 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "age": {
      "type": "number",
    },
    "name": {
      "type": "string",
    },
  },
  "required": [
    "name",
    "age",
  ],
  "type": "object",
}
`;

exports[`Tool Context > oaiParams > should handle optional fields 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "age": {
      "type": [
        "number",
        "null",
      ],
    },
    "name": {
      "description": "The user name",
      "type": "string",
    },
  },
  "required": [
    "name",
    "age",
  ],
  "type": "object",
}
`;

exports[`Tool Context > tool > nested array support > should handle nested array fields 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "items": {
      "items": {
        "additionalProperties": false,
        "properties": {
          "modifiers": {
            "description": "list of the modifiers applied on this item, such as size",
            "items": {
              "additionalProperties": false,
              "properties": {
                "modifier_name": {
                  "type": "string",
                },
                "modifier_value": {
                  "type": "string",
                },
              },
              "required": [
                "modifier_name",
                "modifier_value",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "name": {
            "description": "the item name",
            "type": "string",
          },
        },
        "required": [
          "name",
          "modifiers",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "items",
  ],
  "type": "object",
}
`;
